--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!Doctype HTML>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <h1>Hello World!</h1>
+    </body>
+</html>
