--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     </head>
     <body>
         <h1>Hello World!</h1>
+        <button onclick="playAudio()">Test</button>
+        <button id="skipButton" onclick="nextSnippet()">Skip +1s</button>
+
+        <script src="public/js/song1.js"></script>
+        <script src="public/js/song2.js"></script>
+        <script src="public/js/script.js"></script>
     </body>
 </html>
