--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="public/css/styles.css">
     </head>
     <body>
-        <h1>Hello World!</h1>
         <button onclick="playAudio()">Test</button>
         <button id="skipButton" onclick="nextSnippet()">Skip +1s</button>
 
