--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="public/css/styles.css">
     </head>
     <body>
-        <button onclick="playAudio()">Test</button>
+        <button id="play" onclick="playAudio()"></button>
         <button id="skipButton" onclick="nextSnippet()">Skip +1s</button>
 
         <script src="public/js/song1.js"></script>
