--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <link rel="stylesheet" href="public/css/styles.css">
     </head>
     <body>
-        <button id="play" onclick="playAudio()"></button>
+        <div class="media">
+            <input type="text" id="guessSong">
+            <button id="play" onclick="playAudio()"></button>
+        </div>
         <button id="skipButton" onclick="nextSnippet()">Skip +1s</button>
 
         <script src="public/js/song1.js"></script>
